@@ -3,75 +3,81 @@
 ## 🖥️ Node Analysis: `ip-192-168-27-123.ec2.internal`
 
 ### Node Capacity and Conditions
-- **CPU Capacity**: 4 cores
-- **Memory Capacity**: 15,896,988 Ki (~15.16 GiB)
-- **Allocatable CPU**: 3920m
-- **Allocatable Memory**: 14,880,156 Ki (~14.19 GiB)
-- **Conditions**: 
-  - MemoryPressure: `False` (Sufficient Memory)
-  - DiskPressure: `False` (No Disk Pressure)
-  - PIDPressure: `False` (Sufficient PID)
-  - Ready: `True` (Node is Ready)
+- **CPU:** 4 cores
+- **Memory:** 15.8 GiB
+- **Disk:** 80 GiB
+- **Conditions:**
+  - **MemoryPressure:** False (Sufficient memory available)
+  - **DiskPressure:** False (No disk pressure)
+  - **PIDPressure:** False (Sufficient PID available)
+  - **Ready:** True (Node is ready)
 
 ### Cloud Provider and Instance Type
-- **Provider**: AWS
-- **Instance Type**: `m5.xlarge`
-- **Region**: `us-east-1`
-- **Zone**: `us-east-1b`
+- **Provider:** AWS
+- **Instance Type:** `m5.xlarge`
+- **Region:** `us-east-1`
+- **Zone:** `us-east-1b`
 
 ### Resource Allocation and Utilization
-- **CPU Requests**: 180m (4% of allocatable)
-- **Memory Requests**: 120Mi (0% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
-- **No OOMKill Events Detected**
+- **CPU Requests:** 180m (4% of capacity)
+- **Memory Requests:** 120Mi (0% of capacity)
+- **Memory Limits:** 768Mi (5% of capacity)
+- **No OOMKill events detected.**
 
 ### Recommendations for Node-Level Optimizations
-1. **Resource Requests and Limits**: Increase memory requests to better reflect actual usage, ensuring pods have guaranteed memory.
-2. **CPU Utilization**: Consider increasing CPU requests for critical pods to prevent CPU throttling during peak loads.
-3. **Node Monitoring**: Implement monitoring for detailed insights into resource usage trends.
+1. **Resource Requests and Limits:** Consider setting CPU and memory requests/limits for the AVS pod to ensure better resource management.
+2. **Monitoring:** Implement monitoring for resource utilization to detect any potential bottlenecks or underutilization.
 
 ## 🧵 AVS Pod Analysis: `avs-app-aerospike-vector-search-2`
 
-### Configuration Validation
-- **Node Roles**: Correctly set to `query`.
-- **Heartbeat Seeds**: Properly configured with two seeds.
-- **Listener Addresses**: Configured to `0.0.0.0` for interconnect.
-- **Advertised Listeners**: Correctly set to external IP `3.90.200.129`.
+### Configuration Validation (`aerospike-vector-search.yml`)
+- **Node Roles:** Correctly set to `query`.
+- **Heartbeat Seeds:** Configured with two seeds, ensuring redundancy.
+- **Listener Addresses:** Correctly set to `0.0.0.0` for interconnect.
+- **Interconnect Settings:** Port `5001` is open and configured.
 
 ### JVM Configuration
-- **Memory Settings**:
-  - Initial Heap Size: `241172480` bytes (~230 MiB)
-  - Maximum Heap Size: `13023313920` bytes (~12.13 GiB)
-  - Soft Max Heap Size: `13023313920` bytes (~12.13 GiB)
-  - Reserved Code Cache Size: `251658240` bytes (~240 MiB)
-- **GC Settings**:
-  - GC Type: `UseZGC`
-  - Young GC Threads: `1`
-  - Old GC Threads: `1`
-  - GC-specific Flags: `ZGenerational`
-- **Other Important Flags**:
-  - NUMA Settings: `-UseNUMA`, `-UseNUMAInterleaving` disabled
-  - Compressed Oops: Disabled
-  - Pre-touch: Enabled
-  - Compiler Settings: `CICompilerCount=3`
-  - Exit on OOM: Enabled
-- **Module and Package Settings**: Various modules and packages are opened and exported as needed.
+- **Memory Settings:**
+  - **Initial Heap Size (-Xms):** Not explicitly set, defaults to JVM.
+  - **Maximum Heap Size (-Xmx):** 12419m
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize):** 13023m
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize):** 240m
+  - **Code Heap Sizes:** NonNMethod: 5.8m, NonProfiled: 122.9m, Profiled: 122.9m
 
-### GC.heap_info Analysis
-- **Current Heap Usage**: 2140M
-- **Heap Capacity**: 2140M
-- **Max Capacity**: 12420M
-- **Metaspace Usage**: 77,700K
-- **Class Space Usage**: 8,495K
+- **GC Settings:**
+  - **GC Type:** ZGC (`-XX:+UseZGC`)
+  - **GC Thread Counts:** Young: 1, Old: 1
+  - **GC-specific Flags:** `-XX:+ZGenerational`
+
+- **Other Important Flags:**
+  - **NUMA Settings:** Disabled (`-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`)
+  - **Compressed Oops:** Disabled (`-XX:-UseCompressedOops`)
+  - **Pre-touch Settings:** Enabled (`-XX:+AlwaysPreTouch`)
+  - **Compiler Settings:** `-XX:CICompilerCount=3`
+  - **Exit on OOM:** Enabled (`-XX:+ExitOnOutOfMemoryError`)
+
+- **Module and Package Settings:**
+  - **Added Modules:** `--add-modules jdk.incubator.vector`
+  - **Opened Packages:** Multiple packages opened for unnamed modules.
+  - **Exported Packages:** Several packages exported for internal use.
+
+### GC Heap Info
+- **Current Heap Usage:** 970M
+- **Heap Capacity:** 3726M
+- **Max Capacity:** 12420M
+- **Metaspace Usage:** 77.7M
+- **Class Space Usage:** 8.5M
 
 ### Recommendations for Pod-Level Configurations
-1. **Heap Size**: Ensure the maximum heap size aligns with available memory to prevent OOM issues.
-2. **GC Optimization**: Consider adjusting GC thread counts based on workload characteristics.
-3. **NUMA Settings**: Evaluate the impact of enabling NUMA settings for potential performance gains.
+1. **JVM Memory Settings:** Ensure `-Xms` is explicitly set to avoid dynamic resizing during startup.
+2. **GC Threads:** Consider increasing GC thread counts if experiencing GC-related performance issues.
+3. **Compressed Oops:** Evaluate enabling compressed oops for memory efficiency if applicable.
 
 ### Performance Improvements
-1. **JVM Memory Settings**: Fine-tune heap settings based on observed usage patterns to optimize performance.
-2. **Code Cache**: Ensure the reserved code cache size is sufficient to prevent compilation overhead.
-3. **Monitoring**: Implement JVM and application-level monitoring to detect and address performance bottlenecks.
+1. **Heap Management:** Monitor heap usage and adjust `-Xmx` and `-Xms` to optimize memory allocation.
+2. **GC Performance:** Fine-tune ZGC settings based on application behavior and performance metrics.
 
-By addressing these recommendations, you can enhance the performance and reliability of the Aerospike Vector Search deployment on this Kubernetes node.
+### Resource Allocation Adjustments
+1. **CPU and Memory Requests:** Define specific CPU and memory requests/limits for the AVS pod to ensure resource availability and prevent overcommitment.
+
+By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on Kubernetes. 🌟
