@@ -1,91 +1,96 @@
-### 🖥️ Node-Level Analysis: ip-192-168-28-89.ec2.internal
+## 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
 
-#### Node Capacity and Allocatable Resources
-- **CPU**: 4 cores (Allocatable: 3920m)
-- **Memory**: 15.06 GiB (Allocatable: 14.36 GiB)
-- **Ephemeral Storage**: ~80 GiB (Allocatable: ~71 GiB)
-- **Pods**: 58 max
+### Node Capacity and Conditions
+- **Capacity**: 
+  - CPU: 4 cores
+  - Memory: 15.3 GiB
+  - Pods: 58
+- **Allocatable**: 
+  - CPU: 3920m
+  - Memory: 14.3 GiB
+- **Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
-#### Node Conditions
-- **MemoryPressure**: False
-- **DiskPressure**: False
-- **PIDPressure**: False
-- **Ready**: True
-
-#### Cloud Provider Details
+### Cloud Provider Details
 - **Instance Type**: m5.xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1b
 
-#### Resource Allocation and Utilization
+### Resource Allocation and Utilization
 - **CPU Requests**: 190m (4%)
 - **CPU Limits**: 400m (10%)
 - **Memory Requests**: 184Mi (1%)
 - **Memory Limits**: 1280Mi (8%)
 
-#### Node-Level Issues or Warnings
+### Node-Level Issues or Warnings
 - No OOMKill events or system warnings detected.
 
-### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-1
+---
 
-#### Configuration Validation: `aerospike-vector-search.yml`
-- **Node Roles**: Correctly set to `index-update`.
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
-- **Listener Addresses**: Properly set to `0.0.0.0` for interconnect.
-- **Interconnect Settings**: Port `5001` configured correctly.
+## 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
 
-#### JVM Configuration Analysis
+### Configuration Review: aerospike-vector-search.yml
+- **Node Roles**: index-update
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Listener Addresses**: Set to 0.0.0.0 for interconnect ports.
+- **Interconnect Settings**: Correctly configured.
+
+### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: Not explicitly set, defaulting to system.
-  - **Maximum Heap Size (-Xmx)**: 12,553m
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12,553m
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MiB
-  - **Code Heap Sizes**: NonNMethod: 5.6MiB, NonProfiled: 117MiB, Profiled: 117MiB
+  - Initial Heap Size (-Xms): Not explicitly set
+  - Maximum Heap Size (-Xmx): 12,553m
+  - Soft Max Heap Size (-XX:SoftMaxHeapSize): 12,553m
+  - Reserved Code Cache Size (-XX:ReservedCodeCacheSize): 240m
+  - Code Heap Sizes: NonNMethod (5.8m), NonProfiled (122.9m), Profiled (122.9m)
 
 - **GC Settings**:
-  - **GC Type**: ZGC (-XX:+UseZGC)
-  - **GC Thread Counts**: Young: 1, Old: 1
-  - **GC-Specific Flags**: -XX:+ZGenerational
+  - GC Type: ZGC (-XX:+UseZGC)
+  - GC Thread Counts: Young (1), Old (1)
+  - GC-Specific Flags: ZGenerational enabled
 
 - **Other Important Flags**:
-  - **NUMA Settings**: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
-  - **Compressed Oops**: Disabled (-XX:-UseCompressedOops)
-  - **Pre-touch Settings**: Enabled (-XX:+AlwaysPreTouch)
-  - **Compiler Settings**: CICompilerCount=3
-  - **Exit on OOM**: Enabled (-XX:+ExitOnOutOfMemoryError)
+  - NUMA Settings: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
+  - Compressed Oops: Disabled (-XX:-UseCompressedOops)
+  - Pre-touch Settings: Enabled (-XX:+AlwaysPreTouch)
+  - Compiler Settings: CICompilerCount=3
+  - Exit on OOM: Enabled (-XX:+ExitOnOutOfMemoryError)
 
 - **Module and Package Settings**:
-  - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Multiple packages opened for ALL-UNNAMED
-  - **Exported Packages**: Various internal packages exported
+  - Added Modules: jdk.incubator.vector
+  - Opened Packages: Multiple packages opened for ALL-UNNAMED
+  - Exported Packages: Multiple packages exported for ALL-UNNAMED
 
-#### GC.heap_info Analysis
-- **Current Heap Usage**: 1706M
-- **Heap Capacity**: 2280M
+### GC Heap Info
+- **Current Heap Usage**: 1352M
+- **Heap Capacity**: 3382M
 - **Max Capacity**: 12554M
-- **Metaspace Usage**: 82M
+- **Metaspace Usage**: 82.2M
 - **Class Space Usage**: 8.9M
 
-#### Config-Injection Logs
+### Failed Config-Injection Logs
 - No failed config-injection logs detected.
 
-### 🔧 Recommendations
+---
 
-#### 1. Node-Level Optimizations
-- **CPU and Memory Utilization**: Consider increasing resource requests and limits for critical pods to ensure stability and performance, especially under load.
+## Recommendations
 
-#### 2. Pod-Level Configurations
-- **JVM Heap Settings**: Explicitly set the initial heap size (-Xms) to match the maximum heap size (-Xmx) for better performance and predictability.
-- **Heartbeat Configuration**: Ensure all seed nodes are consistently reachable and monitor for any network issues.
+### 1. Node-Level Optimizations
+- **Increase CPU Requests**: Consider increasing CPU requests for better resource allocation, as current usage is low.
 
-#### 3. Resource Allocation Adjustments
-- **Memory Requests**: Increase memory requests for the AVS pod to align more closely with actual usage, preventing potential resource contention.
+### 2. Pod-Level Configurations
+- **Listener Configuration**: Ensure listener addresses are correctly exposed if needed for external access.
 
-#### 4. Performance Improvements
-- **NUMA Settings**: Consider enabling NUMA settings if the node supports it, which can improve memory access times.
-- **Compressed Oops**: Evaluate enabling compressed oops for potential memory savings, unless specific performance reasons dictate otherwise.
+### 3. Resource Allocation Adjustments
+- **Memory Requests**: Set explicit memory requests for the AVS pod to ensure it has guaranteed resources.
 
-#### 5. JVM Memory Settings
-- **Metaspace and Class Space**: Monitor usage and adjust metaspace settings if nearing capacity to prevent potential out-of-memory errors.
+### 4. Performance Improvements
+- **NUMA Settings**: Consider enabling NUMA settings if the workload benefits from NUMA architecture, especially on larger instances.
 
-By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this node. 🚀
+### 5. JVM Memory Settings
+- **Initial Heap Size**: Set an explicit initial heap size (-Xms) to match the max heap size for more predictable memory usage.
+- **Code Cache Size**: Review and adjust code cache sizes if necessary to optimize JIT compilation performance.
+
+By addressing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment. 🚀
