@@ -1,93 +1,93 @@
 ### 🖥️ Node Analysis: ip-192-168-52-147.ec2.internal
 
-#### Node Capacity & Allocatable Resources:
-- **CPU:** 8 cores (Allocatable: 7910m)
-- **Memory:** 65,023,384 Ki (Allocatable: 64,006,552 Ki)
-- **Ephemeral Storage:** 83,873,772 Ki (Allocatable: 76,224,326,324)
-- **Pods:** 58 (Allocatable: 58)
+#### Node Capacity and Conditions
+- **CPU**: 8 cores
+- **Memory**: 65,023,384 Ki (~62GB)
+- **Allocatable CPU**: 7910m
+- **Allocatable Memory**: 64,006,552 Ki (~61GB)
+- **Node Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
-#### Node Conditions:
-- **MemoryPressure:** False (Sufficient memory available)
-- **DiskPressure:** False (No disk pressure)
-- **PIDPressure:** False (Sufficient PID available)
-- **Ready:** True (Node is ready)
+#### Cloud Provider and Instance Type
+- **Provider**: AWS
+- **Instance Type**: r5.2xlarge
+- **Region**: us-east-1
+- **Zone**: us-east-1d
 
-#### Cloud Provider & Instance Type:
-- **Provider:** AWS
-- **Instance Type:** r5.2xlarge
-- **Region:** us-east-1
-- **Zone:** us-east-1d
+#### Resource Allocation and Utilization
+- **CPU Requests**: 230m (2%)
+- **CPU Limits**: 400m (5%)
+- **Memory Requests**: 724Mi (1%)
+- **Memory Limits**: 1280Mi (2%)
 
-#### Resource Allocation:
-- **CPU Requests:** 230m (2% of allocatable)
-- **CPU Limits:** 400m (5% of allocatable)
-- **Memory Requests:** 724Mi (1% of allocatable)
-- **Memory Limits:** 1280Mi (2% of allocatable)
-
-#### Node-Level Issues or Warnings:
+#### Node-Level Issues or Warnings
 - No OOM events or warnings detected.
 
 ### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
 
-#### Configuration Validation:
-- **Node Roles:** standalone-indexer
-- **Heartbeat Seeds:** Correctly configured with two seeds.
-- **Listener Addresses:** Configured to listen on all interfaces (`0.0.0.0`).
-- **Interconnect Settings:** Port `5001` is open for interconnect.
+#### Aerospike Vector Search Configuration
+- **Node Roles**: standalone-indexer
+- **Heartbeat Seeds**: Configured with two seeds for redundancy.
+- **Listener Addresses**: Configured to listen on all interfaces (0.0.0.0).
+- **Interconnect Ports**: Port 5001 is open for interconnect.
 
-#### JVM Configuration:
-- **Memory Settings:**
-  - **Initial Heap Size (-Xms):** 1027 MiB
-  - **Maximum Heap Size (-Xmx):** 50,799 MiB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize):** 50,799 MiB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize):** 240 MiB
-  - **Code Heap Sizes:**
-    - NonNMethod: 5.6 MiB
-    - NonProfiled: 117.2 MiB
-    - Profiled: 117.2 MiB
+#### JVM Configuration
+- **Memory Settings**:
+  - Initial Heap Size (-Xms): 1GB
+  - Maximum Heap Size (-Xmx): 50,799m (~49.6GB)
+  - Soft Max Heap Size (-XX:SoftMaxHeapSize): 50,799m
+  - Reserved Code Cache Size (-XX:ReservedCodeCacheSize): 240MB
+  - Code Heap Sizes:
+    - NonNMethod: 5.6MB
+    - NonProfiled: 117MB
+    - Profiled: 117MB
 
-- **GC Settings:**
-  - **GC Type:** ZGC
-  - **GC Thread Counts:** ZYoungGCThreads=2, ZOldGCThreads=2
-  - **GC-specific Flags:** -XX:+ZGenerational
+- **GC Settings**:
+  - GC Type: Z Garbage Collector (-XX:+UseZGC)
+  - GC Threads: 2 young, 2 old (-XX:ZYoungGCThreads, -XX:ZOldGCThreads)
+  - GC-specific Flags: Generational ZGC (-XX:+ZGenerational)
 
-- **Other Important Flags:**
-  - **NUMA Settings:** Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
-  - **Compressed Oops:** Not used (-XX:-UseCompressedOops)
-  - **Pre-touch Settings:** Enabled (-XX:+AlwaysPreTouch)
-  - **Compiler Settings:** CICompilerCount=4
-  - **Exit on OOM:** Enabled (-XX:+ExitOnOutOfMemoryError)
+- **Other Important Flags**:
+  - NUMA Settings: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
+  - Compressed Oops: Not used (-XX:-UseCompressedOops)
+  - Pre-touch Settings: Enabled (-XX:+AlwaysPreTouch)
+  - Compiler Settings: 4 compiler threads (-XX:CICompilerCount)
+  - Exit on OOM: Enabled (-XX:+ExitOnOutOfMemoryError)
 
-- **Module and Package Settings:**
-  - **Added Modules:** jdk.incubator.vector
-  - **Opened Packages:** Multiple packages opened for ALL-UNNAMED
-  - **Exported Packages:** Various packages exported for ALL-UNNAMED
+- **Module and Package Settings**:
+  - Added Modules: jdk.incubator.vector
+  - Opened Packages: Several packages opened for ALL-UNNAMED
 
-#### GC.heap_info Analysis:
-- **Current Heap Usage:** 5160 MiB
-- **Heap Capacity:** 38,148 MiB
-- **Max Capacity:** 50,800 MiB
-- **Metaspace Usage:** 80,538 KiB
-- **Class Space Usage:** 8801 KiB
+#### GC Heap Info
+- **Current Heap Usage**: 39,778M
+- **Heap Capacity**: 45,000M
+- **Max Capacity**: 50,800M
+- **Metaspace Usage**: 80,782K
+- **Class Space Usage**: 8,816K
 
-#### Configuration Logs:
+#### Failed Config-Injection Logs
 - No failed config-injection logs detected.
 
-### Recommendations:
+### Recommendations
 
-1. **Node-Level Optimizations:**
-   - 🛠️ **Increase CPU and Memory Requests:** Current requests are very low compared to allocatable resources. Consider increasing them to better reflect actual usage and avoid potential resource contention.
+#### 1. Node-Level Optimizations
+- **CPU and Memory Utilization**: The node is underutilized. Consider consolidating workloads or scaling down the instance type to optimize costs.
 
-2. **Pod-Level Configurations:**
-   - 🔍 **Review Listener Configuration:** Ensure that listening on `0.0.0.0` is secure and necessary. If not, restrict to specific interfaces.
+#### 2. Pod-Level Configurations
+- **Heartbeat Seeds**: Ensure that the seed nodes are highly available to prevent single points of failure.
+- **Listener Configuration**: Review if listening on all interfaces is necessary for security purposes.
 
-3. **Resource Allocation Adjustments:**
-   - 📊 **Adjust JVM Heap Sizes:** The JVM is configured with a very high maximum heap size. Monitor actual usage and adjust `-Xmx` and `-XX:SoftMaxHeapSize` accordingly to avoid over-allocation.
+#### 3. Resource Allocation Adjustments
+- **Resource Requests and Limits**: Set appropriate requests and limits for the AVS pod to ensure resource guarantees and prevent overcommitment.
 
-4. **Performance Improvements:**
-   - 🚀 **Enable NUMA Settings:** If the hardware supports it, consider enabling NUMA settings to potentially improve performance.
+#### 4. Performance Improvements
+- **GC Configuration**: The use of ZGC is appropriate for low-latency applications. Ensure that the application is tuned for the workload characteristics.
 
-5. **JVM Memory Settings:**
-   - 🧠 **Fine-tune GC Threads:** Depending on workload, consider adjusting `ZYoungGCThreads` and `ZOldGCThreads` for optimal garbage collection performance.
+#### 5. JVM Memory Settings
+- **Heap Size**: The maximum heap size is set close to the node's total memory. Ensure that there is enough headroom for other processes.
+- **Metaspace and Class Space**: Monitor usage and adjust if necessary to prevent class loading issues.
 
-By implementing these recommendations, you can optimize resource usage and improve the performance of Aerospike Vector Search on this node.
+By implementing these recommendations, you can enhance the performance, reliability, and cost-effectiveness of your Aerospike Vector Search deployment. 🚀
