@@ -1,184 +1,93 @@
-# Comprehensive Cluster Analysis Report
+## Comprehensive Cluster Analysis Report
 
-## 1. 📊 AVS Index Analysis
+### 1. 📊 AVS Index Analysis
+#### Index Configuration Breakdown
+- **Index Name**: Not provided
+- **Namespace and Set**: Not provided
+- **Vector Dimensions and Distance Metric**: Not provided
+- **HNSW Parameters**: Not provided
+- **Batching and Caching Configurations**: Not provided
+- **Healer and Merge Parameters**: Not provided
 
-### Index 1: Example Index
-- **Index Identification:**
-  - **Name:** example-index
-  - **Namespace:** example-namespace
-  - **Set:** example-set
-  - **Mode:** DISTRIBUTED
+#### Recommendations for Index Optimization
+- **Vector Dimensions vs Memory Usage**: Ensure vector dimensions are optimized to balance accuracy and memory usage.
+- **Caching Parameters vs Available Memory**: Adjust caching parameters to fit within available memory without causing pressure.
+- **Batching Parameters vs Cluster Size**: Optimize batching parameters based on the cluster's processing capacity.
 
-- **Vector Configuration:**
-  - **Dimensions:** 128
-  - **Field Name:** vector_field
-  - **Distance Metric:** cosine
-  - **Set Filter:** example-filter
+### 2. 🌐 Cluster Configuration
+#### Node Distribution and Roles
+- Nodes are distributed across AWS EC2 instances with varying instance types and roles.
 
-- **HNSW Parameters:**
-  - **m:** 16
-  - **ef:** 200
-  - **efConstruction:** 400
-  - **maxMemQueueSize:** 1000
-  - **enableVectorIntegrityCheck:** true
+#### Endpoint Configuration and Visibility
+- Ensure all endpoints are correctly configured for internal and external access as needed.
 
-- **Batching Configuration:**
-  - **indexInterval:** 10s
-  - **maxIndexRecords:** 10000
-  - **maxReindexRecords:** 5000
-  - **reindexInterval:** 30s
+#### Version Information
+- Not provided
 
-- **Caching Configuration:**
-  - **Index Cache:**
-    - **maxEntries:** 100000
-    - **expiry:** 60s
-  - **Record Cache:**
-    - **maxEntries:** 50000
-    - **expiry:** 120s
+#### Cluster ID and Networking Setup
+- Not provided
 
-- **Healer Configuration:**
-  - **maxScanPageSize:** 1000
-  - **maxScanRatePerNode:** 100
-  - **parallelism:** 4
-  - **reindexPercent:** 10
-  - **schedule:** every 5m
+#### Analysis of Node Distribution vs Index Mode
+- Ensure node distribution aligns with the index mode (DISTRIBUTED/STANDALONE) for optimal performance.
 
-- **Merge Configuration:**
-  - **indexParallelism:** 2
-  - **reIndexParallelism:** 2
+### 3. ⚙️ JVM Configuration Analysis
+| Node Name/ID | Initial Heap (-Xms) | Max Heap (-Xmx) | Soft Max Heap | Code Cache | GC Type | GC Threads | NUMA | Compressed Oops | Pre-touch | Compiler Settings | Current Heap Usage | Heap Capacity | Max Capacity | Metaspace Usage | Class Space Usage |
+|--------------|---------------------|-----------------|---------------|------------|---------|------------|------|-----------------|-----------|-------------------|-------------------|---------------|--------------|-----------------|------------------|
+| ip-192-168-27-123 | Not set | 12419m | 13023m | 240m | ZGC | Young: 1, Old: 1 | Disabled | Disabled | Enabled | 3 | 970M | 3726M | 12420M | 77.7M | 8.5M |
+| ip-192-168-28-89 | Not set | 12553m | 12553m | 240m | ZGC | Young: 1, Old: 1 | Disabled | Disabled | Enabled | 3 | 1352M | 3382M | 12554M | 82.2M | 8.9M |
+| ip-192-168-52-147 | 1GB | 50799m | 50799m | 240MB | ZGC | Young: 2, Old: 2 | Disabled | Not used | Enabled | 4 | 39778M | 45000M | 50800M | 80.8M | 8.8M |
 
-- **Storage Configuration:**
-  - **Namespace:** example-namespace
-  - **Set:** example-set
+### 4. 💾 Memory Analysis
+#### Node: ip-192-168-52-147
+- **Heap Size vs Container Limits**: Heap size is close to node's total memory; ensure headroom for other processes.
+- **Memory Distribution**: Majority allocated to heap; monitor metaspace and class space.
+- **GC Pressure Indicators**: Monitor ZGC performance for latency-sensitive applications.
+- **Memory Efficiency Recommendations**: Consider enabling compressed oops if applicable.
 
-- **Recommendations:**
-  - **Vector Dimension Optimization:** Consider reducing dimensions if precision allows, to reduce memory usage.
-  - **HNSW Parameter Tuning:** Adjust `ef` and `efConstruction` for better search performance vs. memory trade-off.
-  - **Caching Strategy:** Increase cache expiry time for frequently accessed vectors.
-  - **Batching Optimization:** Increase `maxIndexRecords` for faster indexing if memory allows.
-  - **Memory Usage Optimization:** Monitor `maxMemQueueSize` and adjust based on observed memory usage patterns.
+### 5. 🔍 Performance Configuration Analysis
+- **Index Caching vs JVM Heap Size**: Ensure caching does not exceed heap capacity.
+- **Batching Parameters vs Available Memory**: Optimize batching to prevent memory overuse.
+- **Thread Settings vs Available CPU**: Adjust thread settings to utilize available CPU efficiently.
+- **Network Configuration Impact**: Ensure network settings support required throughput.
 
-## 2. 🌐 Cluster Configuration
+### 6. ⚠️ Potential Issues and Recommendations
+- **Memory Configuration Improvements**: Set explicit `-Xms` values to prevent dynamic resizing.
+- **Index Parameter Optimizations**: Align index parameters with available resources.
+- **JVM Flag Adjustments**: Enable compressed oops and optimize GC settings.
+- **Cluster Balance Suggestions**: Review node roles and distribution for optimal load balancing.
+- **Caching Strategy Improvements**: Adjust caching to fit within memory constraints.
 
-- **Node Distribution and Roles:**
-  - Nodes are evenly distributed across availability zones with roles assigned based on workload requirements.
+### 7. 📈 Scaling Considerations
+- **Current Resource Utilization**: Nodes are underutilized; consider consolidating workloads.
+- **Headroom for Growth**: Ample headroom available; monitor for future scaling needs.
+- **Bottleneck Identification**: No immediate bottlenecks identified.
+- **Scaling Recommendations**: Consider scaling down instance types or consolidating workloads.
 
-- **Endpoint Configuration and Visibility:**
-  - Endpoints are configured for both internal and external access with appropriate security groups.
+### 8. 🔄 Resource Overview
+| Node | Total Memory | Allocatable Memory | AVS Pods | Instance Type | Status/Health |
+|------|--------------|--------------------|----------|---------------|---------------|
+| ip-192-168-26-117 | 15.2 GiB | 14.2 GiB | None | m5.xlarge | Ready |
+| ip-192-168-27-123 | 15.8 GiB | 14.8 GiB | avs-app-aerospike-vector-search-2 | m5.xlarge | Ready |
+| ip-192-168-28-89 | 15.3 GiB | 14.3 GiB | avs-app-aerospike-vector-search-1 | m5.xlarge | Ready |
+| ip-192-168-52-147 | 62 GiB | 61 GiB | avs-app-aerospike-vector-search-0 | r5.2xlarge | Ready |
+| ip-192-168-53-124 | 15.8 GiB | 14.8 GiB | None | m5.xlarge | Ready |
 
-- **Version Information:**
-  - Aerospike Version: 5.7.0.10
-  - AVS Version: 1.2.3
+### 9. 📊 Node Overview
+| Pod Name | Roles | JVM Flags | Memory Request | Memory Limit | Memory Used |
+|----------|-------|-----------|----------------|--------------|-------------|
+| avs-app-aerospike-vector-search-0 | standalone-indexer | Multiple flags including ZGC | 724Mi | 1280Mi | 39778M |
+| avs-app-aerospike-vector-search-1 | index-update | Multiple flags including ZGC | 184Mi | 1280Mi | 1352M |
+| avs-app-aerospike-vector-search-2 | query | Multiple flags including ZGC | 120Mi | 768Mi | 970M |
 
-- **Cluster ID and Networking Setup:**
-  - Cluster ID: aerospike-cluster-123
-  - Networking: VPC with subnets across multiple availability zones.
+### 10. ⚠️ OOMKill Analysis
+- **No OOMKill events detected across the cluster.**
 
-- **Analysis of Node Distribution vs Index Mode:**
-  - DISTRIBUTED mode is well-suited for the current node distribution, providing redundancy and load balancing.
+#### Recommendations for OOMKill Prevention
+- **JVM Heap Settings**: Ensure heap settings are within node capacity.
+- **Node Memory Capacity**: Monitor and adjust as needed.
+- **Pattern Analysis**: Regularly review for patterns indicating potential issues.
 
-## 3. ⚙️ JVM Configuration Analysis
-
-| Node Name/ID | Initial Heap (-Xms) | Maximum Heap (-Xmx) | Soft Max Heap | Code Cache | GC Type | GC Threads | NUMA | Compressed Oops | Pre-touch | Compiler Settings |
-|--------------|---------------------|---------------------|---------------|------------|---------|------------|------|-----------------|-----------|-------------------|
-| Node-1       | 1G                  | 12G                 | 12G           | 240M       | ZGC     | 2          | No   | No              | Yes       | CICompilerCount=3 |
-| Node-2       | 1G                  | 12G                 | 12G           | 240M       | ZGC     | 2          | No   | No              | Yes       | CICompilerCount=3 |
-
-- **Current Memory Usage:**
-  - **Used Heap:** 8G
-  - **Heap Capacity:** 12G
-  - **Max Capacity:** 12G
-  - **Metaspace Usage:** 80M
-  - **Class Space Usage:** 8M
-
-## 4. 💾 Memory Analysis
-
-- **Heap Size vs Container Limits:**
-  - Heap size is appropriately set within container limits, ensuring no OOM events.
-
-- **Memory Distribution Across Regions:**
-  - Memory is evenly distributed across heap, metaspace, and class space.
-
-- **GC Pressure Indicators:**
-  - Low GC pressure observed with ZGC, indicating efficient memory management.
-
-- **Memory Efficiency Recommendations:**
-  - Consider enabling compressed oops for potential memory savings.
-  - Monitor metaspace usage and adjust if nearing capacity.
-
-- **Correlation Between Index Parameters and Memory Usage:**
-  - High `ef` values correlate with increased memory usage; adjust based on performance needs.
-
-## 5. 🔍 Performance Configuration Analysis
-
-- **Index Caching vs JVM Heap Size:**
-  - Index cache size is well-aligned with JVM heap size, ensuring efficient caching without excessive memory usage.
-
-- **Batching Parameters vs Available Memory:**
-  - Batching parameters are optimized for current memory availability, with room for scaling.
-
-- **Thread Settings vs Available CPU:**
-  - Thread settings are balanced with available CPU resources, preventing throttling.
-
-- **Network Configuration Impact:**
-  - Network configuration supports low-latency communication, critical for distributed index operations.
-
-## 6. ⚠️ Potential Issues and Recommendations
-
-- **Memory Configuration Improvements:**
-  - Consider increasing heap size if memory usage approaches current limits.
-
-- **Index Parameter Optimizations:**
-  - Fine-tune HNSW parameters to balance performance and memory usage.
-
-- **JVM Flag Adjustments:**
-  - Enable compressed oops for potential memory savings.
-
-- **Cluster Balance Suggestions:**
-  - Ensure even distribution of workloads across nodes to prevent hotspots.
-
-- **Caching Strategy Improvements:**
-  - Increase cache expiry times for frequently accessed data.
-
-## 7. 📈 Scaling Considerations
-
-- **Current Resource Utilization:**
-  - Resources are currently underutilized, providing headroom for growth.
-
-- **Headroom for Growth:**
-  - Ample memory and CPU resources available for scaling.
-
-- **Bottleneck Identification:**
-  - Monitor network latency as a potential bottleneck in distributed operations.
-
-- **Scaling Recommendations:**
-  - Consider horizontal scaling by adding more nodes to distribute load.
-
-## 8. 🔄 Resource Overview
-
-| Node Name | Total Memory | Allocatable Memory | AVS Pods | Instance Type | Status/Health |
-|-----------|--------------|--------------------|----------|---------------|---------------|
-| Node-1    | 64G          | 62G                | 1        | r5.2xlarge    | Healthy       |
-| Node-2    | 16G          | 14G                | 1        | m5.xlarge     | Healthy       |
-
-## 9. 📊 Node Overview
-
-| Pod Name                           | Roles         | JVM Flags                                     | Memory Request | Memory Limit | Memory Used |
-|------------------------------------|---------------|-----------------------------------------------|----------------|--------------|-------------|
-| avs-app-aerospike-vector-search-0  | standalone    | -Xmx12G -XX:+UseZGC -XX:+AlwaysPreTouch       | 1G             | 12G          | 8G          |
-| avs-app-aerospike-vector-search-1  | index-update  | -Xmx12G -XX:+UseZGC -XX:+AlwaysPreTouch       | 1G             | 12G          | 8G          |
-
-## 10. ⚠️ OOMKill Analysis
-
-- **No OOMKill Events Detected:**
-  - No container restarts due to OOMKill.
-  - No system OOM events found.
-
-- **Recommendations:**
-  - Continue monitoring memory usage and adjust JVM heap sizes as needed.
-  - Ensure proper alerting is in place for any future memory pressure events.
-
-By implementing these recommendations and maintaining vigilant monitoring, the Aerospike Vector Search cluster can be optimized for performance, reliability, and scalability.
+By implementing these recommendations, the Aerospike Vector Search deployment can be optimized for performance, reliability, and cost-effectiveness. 🚀
 
 ## Detailed Node Analysis
 
@@ -188,55 +97,63 @@ By implementing these recommendations and maintaining vigilant monitoring, the A
 ### 🖥️ Node Analysis: ip-192-168-26-117.ec2.internal
 
 #### Node Overview
-- **Instance Type:** m5.xlarge
-- **Region & Zone:** us-east-1, us-east-1b
-- **Capacity:**
-  - **CPU:** 4 cores
-  - **Memory:** 15.9 GiB
-  - **Ephemeral Storage:** ~80 GiB
-  - **Pods:** 58
-- **Allocatable Resources:**
-  - **CPU:** 3920m
-  - **Memory:** 14.8 GiB
-  - **Ephemeral Storage:** ~71 GiB
+- **Instance Type**: `m5.xlarge` (AWS EC2)
+- **Region/Zone**: `us-east-1` / `us-east-1b`
+- **Roles**: None specified
+- **Capacity**: 
+  - **CPU**: 4 cores
+  - **Memory**: 15.2 GiB
+  - **Ephemeral Storage**: ~80 GiB
+- **Allocatable**:
+  - **CPU**: 3920m
+  - **Memory**: 14.2 GiB
+  - **Pods**: 58
 
 #### Node Conditions
-- **Memory Pressure:** False (Sufficient memory available)
-- **Disk Pressure:** False (No disk pressure)
-- **PID Pressure:** False (Sufficient PID available)
-- **Ready:** True (Node is ready)
+- **MemoryPressure**: `False` - Sufficient memory available
+- **DiskPressure**: `False` - No disk pressure
+- **PIDPressure**: `False` - Sufficient PID available
+- **Ready**: `True` - Node is ready
 
-#### Resource Allocation
-- **CPU Requests:** 190m (4%)
-- **Memory Requests:** 170Mi (1%)
-- **Memory Limits:** 768Mi (5%)
+#### Resource Utilization
+- **CPU Requests**: 190m (4% of allocatable)
+- **Memory Requests**: 170Mi (1% of allocatable)
+- **Memory Limits**: 768Mi (5% of allocatable)
 
-#### Node-Level Observations
-- The node is underutilized in terms of CPU and memory, indicating potential for scaling up workloads.
-- No OOM events or pressure conditions, suggesting stable node performance.
+#### Node-Level Recommendations
+1. **Resource Requests**: Increase resource requests for critical system pods to ensure they are not preempted.
+2. **Monitoring**: Set up alerts for CPU and memory utilization to prevent resource exhaustion.
+3. **Node Labels**: Consider adding specific roles to the node for better resource management and scheduling.
 
-### Recommendations for Node-Level Optimizations
-1. **Resource Utilization:** Consider deploying more workloads to utilize the available resources effectively.
-2. **Monitoring:** Keep monitoring for any changes in resource pressure to ensure continued stability.
+### 🏷️ Cloud Provider Details
+- **Provider**: AWS
+- **Instance Type**: `m5.xlarge`
+- **Capacity Type**: On-demand
 
-### 🚀 Pod-Level Analysis
-#### Pod Overview
-- **No Aerospike Vector Search (AVS) pods found on this node.**
+### ❌ No AVS Pods Found
+- **Observation**: No Aerospike Vector Search (AVS) pods are currently running on this node.
 
-### Recommendations for Pod-Level Configurations
-- **Deployment Strategy:** Ensure AVS pods are scheduled on nodes with sufficient resources. Consider using node affinity or taints and tolerations to control pod placement.
+### General Recommendations
+1. **Node-Level Optimizations**:
+   - Ensure that the node is appropriately labeled for specific workloads to optimize scheduling.
+   - Consider using taints and tolerations to manage pod placement effectively.
 
-### 📊 Resource Allocation Adjustments
-- **CPU and Memory Requests:** Given the low utilization, consider adjusting requests and limits to match actual usage patterns, allowing for better resource allocation across the cluster.
+2. **Pod-Level Configurations**:
+   - Since no AVS pods are found, ensure that deployment configurations are correct and pods are scheduled on the appropriate nodes.
 
-### 🛠️ Performance Improvements
-- **Scaling:** With available resources, consider scaling up existing deployments or adding new ones to maximize node utilization.
+3. **Resource Allocation Adjustments**:
+   - Evaluate current resource requests and limits for all pods to ensure efficient utilization.
+   - Consider using Vertical Pod Autoscaler (VPA) for dynamic resource adjustments.
 
-### JVM Memory Settings
-- **No AVS pods detected, hence no JVM configurations to analyze.** Ensure that when AVS pods are deployed, JVM settings are optimized for performance and resource usage.
+4. **Performance Improvements**:
+   - Implement Horizontal Pod Autoscaler (HPA) for scaling based on load.
+   - Regularly review node and pod performance metrics to identify bottlenecks.
 
-### Final Thoughts
-- The node is well-configured and stable, with ample resources available for additional workloads. Ensure that future deployments are strategically placed to maintain this balance. Keep an eye on resource usage trends to anticipate any necessary adjustments.
+5. **JVM Memory Settings**:
+   - For future AVS pods, ensure JVM settings are optimized for the workload, focusing on heap size and garbage collection settings.
+
+### 📈 Conclusion
+This node is well-configured and underutilized, providing opportunities for hosting additional workloads. Ensure that future deployments, especially AVS pods, are correctly configured and scheduled to leverage the node's capacity effectively.
 
 ### Node: ip-192-168-27-123.ec2.internal
 
@@ -245,283 +162,299 @@ By implementing these recommendations and maintaining vigilant monitoring, the A
 ## 🖥️ Node Analysis: `ip-192-168-27-123.ec2.internal`
 
 ### Node Capacity and Conditions
-- **CPU Capacity**: 4 cores
-- **Memory Capacity**: 15,896,988 Ki (~15.16 GiB)
-- **Allocatable CPU**: 3920m
-- **Allocatable Memory**: 14,880,156 Ki (~14.19 GiB)
-- **Conditions**: 
-  - MemoryPressure: `False` (Sufficient Memory)
-  - DiskPressure: `False` (No Disk Pressure)
-  - PIDPressure: `False` (Sufficient PID)
-  - Ready: `True` (Node is Ready)
+- **CPU:** 4 cores
+- **Memory:** 15.8 GiB
+- **Disk:** 80 GiB
+- **Conditions:**
+  - **MemoryPressure:** False (Sufficient memory available)
+  - **DiskPressure:** False (No disk pressure)
+  - **PIDPressure:** False (Sufficient PID available)
+  - **Ready:** True (Node is ready)
 
 ### Cloud Provider and Instance Type
-- **Provider**: AWS
-- **Instance Type**: `m5.xlarge`
-- **Region**: `us-east-1`
-- **Zone**: `us-east-1b`
+- **Provider:** AWS
+- **Instance Type:** `m5.xlarge`
+- **Region:** `us-east-1`
+- **Zone:** `us-east-1b`
 
 ### Resource Allocation and Utilization
-- **CPU Requests**: 180m (4% of allocatable)
-- **Memory Requests**: 120Mi (0% of allocatable)
-- **Memory Limits**: 768Mi (5% of allocatable)
-- **No OOMKill Events Detected**
+- **CPU Requests:** 180m (4% of capacity)
+- **Memory Requests:** 120Mi (0% of capacity)
+- **Memory Limits:** 768Mi (5% of capacity)
+- **No OOMKill events detected.**
 
 ### Recommendations for Node-Level Optimizations
-1. **Resource Requests and Limits**: Increase memory requests to better reflect actual usage, ensuring pods have guaranteed memory.
-2. **CPU Utilization**: Consider increasing CPU requests for critical pods to prevent CPU throttling during peak loads.
-3. **Node Monitoring**: Implement monitoring for detailed insights into resource usage trends.
+1. **Resource Requests and Limits:** Consider setting CPU and memory requests/limits for the AVS pod to ensure better resource management.
+2. **Monitoring:** Implement monitoring for resource utilization to detect any potential bottlenecks or underutilization.
 
 ## 🧵 AVS Pod Analysis: `avs-app-aerospike-vector-search-2`
 
-### Configuration Validation
-- **Node Roles**: Correctly set to `query`.
-- **Heartbeat Seeds**: Properly configured with two seeds.
-- **Listener Addresses**: Configured to `0.0.0.0` for interconnect.
-- **Advertised Listeners**: Correctly set to external IP `3.90.200.129`.
+### Configuration Validation (`aerospike-vector-search.yml`)
+- **Node Roles:** Correctly set to `query`.
+- **Heartbeat Seeds:** Configured with two seeds, ensuring redundancy.
+- **Listener Addresses:** Correctly set to `0.0.0.0` for interconnect.
+- **Interconnect Settings:** Port `5001` is open and configured.
 
 ### JVM Configuration
-- **Memory Settings**:
-  - Initial Heap Size: `241172480` bytes (~230 MiB)
-  - Maximum Heap Size: `13023313920` bytes (~12.13 GiB)
-  - Soft Max Heap Size: `13023313920` bytes (~12.13 GiB)
-  - Reserved Code Cache Size: `251658240` bytes (~240 MiB)
-- **GC Settings**:
-  - GC Type: `UseZGC`
-  - Young GC Threads: `1`
-  - Old GC Threads: `1`
-  - GC-specific Flags: `ZGenerational`
-- **Other Important Flags**:
-  - NUMA Settings: `-UseNUMA`, `-UseNUMAInterleaving` disabled
-  - Compressed Oops: Disabled
-  - Pre-touch: Enabled
-  - Compiler Settings: `CICompilerCount=3`
-  - Exit on OOM: Enabled
-- **Module and Package Settings**: Various modules and packages are opened and exported as needed.
+- **Memory Settings:**
+  - **Initial Heap Size (-Xms):** Not explicitly set, defaults to JVM.
+  - **Maximum Heap Size (-Xmx):** 12419m
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize):** 13023m
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize):** 240m
+  - **Code Heap Sizes:** NonNMethod: 5.8m, NonProfiled: 122.9m, Profiled: 122.9m
 
-### GC.heap_info Analysis
-- **Current Heap Usage**: 2140M
-- **Heap Capacity**: 2140M
-- **Max Capacity**: 12420M
-- **Metaspace Usage**: 77,700K
-- **Class Space Usage**: 8,495K
+- **GC Settings:**
+  - **GC Type:** ZGC (`-XX:+UseZGC`)
+  - **GC Thread Counts:** Young: 1, Old: 1
+  - **GC-specific Flags:** `-XX:+ZGenerational`
+
+- **Other Important Flags:**
+  - **NUMA Settings:** Disabled (`-XX:-UseNUMA`, `-XX:-UseNUMAInterleaving`)
+  - **Compressed Oops:** Disabled (`-XX:-UseCompressedOops`)
+  - **Pre-touch Settings:** Enabled (`-XX:+AlwaysPreTouch`)
+  - **Compiler Settings:** `-XX:CICompilerCount=3`
+  - **Exit on OOM:** Enabled (`-XX:+ExitOnOutOfMemoryError`)
+
+- **Module and Package Settings:**
+  - **Added Modules:** `--add-modules jdk.incubator.vector`
+  - **Opened Packages:** Multiple packages opened for unnamed modules.
+  - **Exported Packages:** Several packages exported for internal use.
+
+### GC Heap Info
+- **Current Heap Usage:** 970M
+- **Heap Capacity:** 3726M
+- **Max Capacity:** 12420M
+- **Metaspace Usage:** 77.7M
+- **Class Space Usage:** 8.5M
 
 ### Recommendations for Pod-Level Configurations
-1. **Heap Size**: Ensure the maximum heap size aligns with available memory to prevent OOM issues.
-2. **GC Optimization**: Consider adjusting GC thread counts based on workload characteristics.
-3. **NUMA Settings**: Evaluate the impact of enabling NUMA settings for potential performance gains.
+1. **JVM Memory Settings:** Ensure `-Xms` is explicitly set to avoid dynamic resizing during startup.
+2. **GC Threads:** Consider increasing GC thread counts if experiencing GC-related performance issues.
+3. **Compressed Oops:** Evaluate enabling compressed oops for memory efficiency if applicable.
 
 ### Performance Improvements
-1. **JVM Memory Settings**: Fine-tune heap settings based on observed usage patterns to optimize performance.
-2. **Code Cache**: Ensure the reserved code cache size is sufficient to prevent compilation overhead.
-3. **Monitoring**: Implement JVM and application-level monitoring to detect and address performance bottlenecks.
+1. **Heap Management:** Monitor heap usage and adjust `-Xmx` and `-Xms` to optimize memory allocation.
+2. **GC Performance:** Fine-tune ZGC settings based on application behavior and performance metrics.
 
-By addressing these recommendations, you can enhance the performance and reliability of the Aerospike Vector Search deployment on this Kubernetes node.
+### Resource Allocation Adjustments
+1. **CPU and Memory Requests:** Define specific CPU and memory requests/limits for the AVS pod to ensure resource availability and prevent overcommitment.
+
+By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on Kubernetes. 🌟
 
 ### Node: ip-192-168-28-89.ec2.internal
 
-### 🖥️ Node-Level Analysis: ip-192-168-28-89.ec2.internal
+## 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
 
-#### Node Capacity and Allocatable Resources
-- **CPU**: 4 cores (Allocatable: 3920m)
-- **Memory**: 15.06 GiB (Allocatable: 14.36 GiB)
-- **Ephemeral Storage**: ~80 GiB (Allocatable: ~71 GiB)
-- **Pods**: 58 max
+### Node Capacity and Conditions
+- **Capacity**: 
+  - CPU: 4 cores
+  - Memory: 15.3 GiB
+  - Pods: 58
+- **Allocatable**: 
+  - CPU: 3920m
+  - Memory: 14.3 GiB
+- **Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
-#### Node Conditions
-- **MemoryPressure**: False
-- **DiskPressure**: False
-- **PIDPressure**: False
-- **Ready**: True
-
-#### Cloud Provider Details
+### Cloud Provider Details
 - **Instance Type**: m5.xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1b
 
-#### Resource Allocation and Utilization
+### Resource Allocation and Utilization
 - **CPU Requests**: 190m (4%)
 - **CPU Limits**: 400m (10%)
 - **Memory Requests**: 184Mi (1%)
 - **Memory Limits**: 1280Mi (8%)
 
-#### Node-Level Issues or Warnings
+### Node-Level Issues or Warnings
 - No OOMKill events or system warnings detected.
 
-### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-1
+---
 
-#### Configuration Validation: `aerospike-vector-search.yml`
-- **Node Roles**: Correctly set to `index-update`.
-- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
-- **Listener Addresses**: Properly set to `0.0.0.0` for interconnect.
-- **Interconnect Settings**: Port `5001` configured correctly.
+## 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
 
-#### JVM Configuration Analysis
+### Configuration Review: aerospike-vector-search.yml
+- **Node Roles**: index-update
+- **Heartbeat Seeds**: Correctly configured with two seeds.
+- **Listener Addresses**: Set to 0.0.0.0 for interconnect ports.
+- **Interconnect Settings**: Correctly configured.
+
+### JVM Configuration
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: Not explicitly set, defaulting to system.
-  - **Maximum Heap Size (-Xmx)**: 12,553m
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12,553m
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MiB
-  - **Code Heap Sizes**: NonNMethod: 5.6MiB, NonProfiled: 117MiB, Profiled: 117MiB
+  - Initial Heap Size (-Xms): Not explicitly set
+  - Maximum Heap Size (-Xmx): 12,553m
+  - Soft Max Heap Size (-XX:SoftMaxHeapSize): 12,553m
+  - Reserved Code Cache Size (-XX:ReservedCodeCacheSize): 240m
+  - Code Heap Sizes: NonNMethod (5.8m), NonProfiled (122.9m), Profiled (122.9m)
 
 - **GC Settings**:
-  - **GC Type**: ZGC (-XX:+UseZGC)
-  - **GC Thread Counts**: Young: 1, Old: 1
-  - **GC-Specific Flags**: -XX:+ZGenerational
+  - GC Type: ZGC (-XX:+UseZGC)
+  - GC Thread Counts: Young (1), Old (1)
+  - GC-Specific Flags: ZGenerational enabled
 
 - **Other Important Flags**:
-  - **NUMA Settings**: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
-  - **Compressed Oops**: Disabled (-XX:-UseCompressedOops)
-  - **Pre-touch Settings**: Enabled (-XX:+AlwaysPreTouch)
-  - **Compiler Settings**: CICompilerCount=3
-  - **Exit on OOM**: Enabled (-XX:+ExitOnOutOfMemoryError)
+  - NUMA Settings: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
+  - Compressed Oops: Disabled (-XX:-UseCompressedOops)
+  - Pre-touch Settings: Enabled (-XX:+AlwaysPreTouch)
+  - Compiler Settings: CICompilerCount=3
+  - Exit on OOM: Enabled (-XX:+ExitOnOutOfMemoryError)
 
 - **Module and Package Settings**:
-  - **Added Modules**: jdk.incubator.vector
-  - **Opened Packages**: Multiple packages opened for ALL-UNNAMED
-  - **Exported Packages**: Various internal packages exported
+  - Added Modules: jdk.incubator.vector
+  - Opened Packages: Multiple packages opened for ALL-UNNAMED
+  - Exported Packages: Multiple packages exported for ALL-UNNAMED
 
-#### GC.heap_info Analysis
-- **Current Heap Usage**: 1706M
-- **Heap Capacity**: 2280M
+### GC Heap Info
+- **Current Heap Usage**: 1352M
+- **Heap Capacity**: 3382M
 - **Max Capacity**: 12554M
-- **Metaspace Usage**: 82M
+- **Metaspace Usage**: 82.2M
 - **Class Space Usage**: 8.9M
 
-#### Config-Injection Logs
+### Failed Config-Injection Logs
 - No failed config-injection logs detected.
 
-### 🔧 Recommendations
+---
 
-#### 1. Node-Level Optimizations
-- **CPU and Memory Utilization**: Consider increasing resource requests and limits for critical pods to ensure stability and performance, especially under load.
+## Recommendations
 
-#### 2. Pod-Level Configurations
-- **JVM Heap Settings**: Explicitly set the initial heap size (-Xms) to match the maximum heap size (-Xmx) for better performance and predictability.
-- **Heartbeat Configuration**: Ensure all seed nodes are consistently reachable and monitor for any network issues.
+### 1. Node-Level Optimizations
+- **Increase CPU Requests**: Consider increasing CPU requests for better resource allocation, as current usage is low.
 
-#### 3. Resource Allocation Adjustments
-- **Memory Requests**: Increase memory requests for the AVS pod to align more closely with actual usage, preventing potential resource contention.
+### 2. Pod-Level Configurations
+- **Listener Configuration**: Ensure listener addresses are correctly exposed if needed for external access.
 
-#### 4. Performance Improvements
-- **NUMA Settings**: Consider enabling NUMA settings if the node supports it, which can improve memory access times.
-- **Compressed Oops**: Evaluate enabling compressed oops for potential memory savings, unless specific performance reasons dictate otherwise.
+### 3. Resource Allocation Adjustments
+- **Memory Requests**: Set explicit memory requests for the AVS pod to ensure it has guaranteed resources.
 
-#### 5. JVM Memory Settings
-- **Metaspace and Class Space**: Monitor usage and adjust metaspace settings if nearing capacity to prevent potential out-of-memory errors.
+### 4. Performance Improvements
+- **NUMA Settings**: Consider enabling NUMA settings if the workload benefits from NUMA architecture, especially on larger instances.
 
-By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this node. 🚀
+### 5. JVM Memory Settings
+- **Initial Heap Size**: Set an explicit initial heap size (-Xms) to match the max heap size for more predictable memory usage.
+- **Code Cache Size**: Review and adjust code cache sizes if necessary to optimize JIT compilation performance.
+
+By addressing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment. 🚀
 
 ### Node: ip-192-168-52-147.ec2.internal
 
 ### 🖥️ Node Analysis: ip-192-168-52-147.ec2.internal
 
-#### Node Capacity & Allocatable Resources:
-- **CPU:** 8 cores (Allocatable: 7910m)
-- **Memory:** 65,023,384 Ki (Allocatable: 64,006,552 Ki)
-- **Ephemeral Storage:** 83,873,772 Ki (Allocatable: 76,224,326,324)
-- **Pods:** 58 (Allocatable: 58)
+#### Node Capacity and Conditions
+- **CPU**: 8 cores
+- **Memory**: 65,023,384 Ki (~62GB)
+- **Allocatable CPU**: 7910m
+- **Allocatable Memory**: 64,006,552 Ki (~61GB)
+- **Node Conditions**: 
+  - MemoryPressure: False
+  - DiskPressure: False
+  - PIDPressure: False
+  - Ready: True
 
-#### Node Conditions:
-- **MemoryPressure:** False (Sufficient memory available)
-- **DiskPressure:** False (No disk pressure)
-- **PIDPressure:** False (Sufficient PID available)
-- **Ready:** True (Node is ready)
+#### Cloud Provider and Instance Type
+- **Provider**: AWS
+- **Instance Type**: r5.2xlarge
+- **Region**: us-east-1
+- **Zone**: us-east-1d
 
-#### Cloud Provider & Instance Type:
-- **Provider:** AWS
-- **Instance Type:** r5.2xlarge
-- **Region:** us-east-1
-- **Zone:** us-east-1d
+#### Resource Allocation and Utilization
+- **CPU Requests**: 230m (2%)
+- **CPU Limits**: 400m (5%)
+- **Memory Requests**: 724Mi (1%)
+- **Memory Limits**: 1280Mi (2%)
 
-#### Resource Allocation:
-- **CPU Requests:** 230m (2% of allocatable)
-- **CPU Limits:** 400m (5% of allocatable)
-- **Memory Requests:** 724Mi (1% of allocatable)
-- **Memory Limits:** 1280Mi (2% of allocatable)
-
-#### Node-Level Issues or Warnings:
+#### Node-Level Issues or Warnings
 - No OOM events or warnings detected.
 
 ### 🧵 Pod Analysis: avs-app-aerospike-vector-search-0
 
-#### Configuration Validation:
-- **Node Roles:** standalone-indexer
-- **Heartbeat Seeds:** Correctly configured with two seeds.
-- **Listener Addresses:** Configured to listen on all interfaces (`0.0.0.0`).
-- **Interconnect Settings:** Port `5001` is open for interconnect.
+#### Aerospike Vector Search Configuration
+- **Node Roles**: standalone-indexer
+- **Heartbeat Seeds**: Configured with two seeds for redundancy.
+- **Listener Addresses**: Configured to listen on all interfaces (0.0.0.0).
+- **Interconnect Ports**: Port 5001 is open for interconnect.
 
-#### JVM Configuration:
-- **Memory Settings:**
-  - **Initial Heap Size (-Xms):** 1027 MiB
-  - **Maximum Heap Size (-Xmx):** 50,799 MiB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize):** 50,799 MiB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize):** 240 MiB
-  - **Code Heap Sizes:**
-    - NonNMethod: 5.6 MiB
-    - NonProfiled: 117.2 MiB
-    - Profiled: 117.2 MiB
+#### JVM Configuration
+- **Memory Settings**:
+  - Initial Heap Size (-Xms): 1GB
+  - Maximum Heap Size (-Xmx): 50,799m (~49.6GB)
+  - Soft Max Heap Size (-XX:SoftMaxHeapSize): 50,799m
+  - Reserved Code Cache Size (-XX:ReservedCodeCacheSize): 240MB
+  - Code Heap Sizes:
+    - NonNMethod: 5.6MB
+    - NonProfiled: 117MB
+    - Profiled: 117MB
 
-- **GC Settings:**
-  - **GC Type:** ZGC
-  - **GC Thread Counts:** ZYoungGCThreads=2, ZOldGCThreads=2
-  - **GC-specific Flags:** -XX:+ZGenerational
+- **GC Settings**:
+  - GC Type: Z Garbage Collector (-XX:+UseZGC)
+  - GC Threads: 2 young, 2 old (-XX:ZYoungGCThreads, -XX:ZOldGCThreads)
+  - GC-specific Flags: Generational ZGC (-XX:+ZGenerational)
 
-- **Other Important Flags:**
-  - **NUMA Settings:** Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
-  - **Compressed Oops:** Not used (-XX:-UseCompressedOops)
-  - **Pre-touch Settings:** Enabled (-XX:+AlwaysPreTouch)
-  - **Compiler Settings:** CICompilerCount=4
-  - **Exit on OOM:** Enabled (-XX:+ExitOnOutOfMemoryError)
+- **Other Important Flags**:
+  - NUMA Settings: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
+  - Compressed Oops: Not used (-XX:-UseCompressedOops)
+  - Pre-touch Settings: Enabled (-XX:+AlwaysPreTouch)
+  - Compiler Settings: 4 compiler threads (-XX:CICompilerCount)
+  - Exit on OOM: Enabled (-XX:+ExitOnOutOfMemoryError)
 
-- **Module and Package Settings:**
-  - **Added Modules:** jdk.incubator.vector
-  - **Opened Packages:** Multiple packages opened for ALL-UNNAMED
-  - **Exported Packages:** Various packages exported for ALL-UNNAMED
+- **Module and Package Settings**:
+  - Added Modules: jdk.incubator.vector
+  - Opened Packages: Several packages opened for ALL-UNNAMED
 
-#### GC.heap_info Analysis:
-- **Current Heap Usage:** 5160 MiB
-- **Heap Capacity:** 38,148 MiB
-- **Max Capacity:** 50,800 MiB
-- **Metaspace Usage:** 80,538 KiB
-- **Class Space Usage:** 8801 KiB
+#### GC Heap Info
+- **Current Heap Usage**: 39,778M
+- **Heap Capacity**: 45,000M
+- **Max Capacity**: 50,800M
+- **Metaspace Usage**: 80,782K
+- **Class Space Usage**: 8,816K
 
-#### Configuration Logs:
+#### Failed Config-Injection Logs
 - No failed config-injection logs detected.
 
-### Recommendations:
+### Recommendations
 
-1. **Node-Level Optimizations:**
-   - 🛠️ **Increase CPU and Memory Requests:** Current requests are very low compared to allocatable resources. Consider increasing them to better reflect actual usage and avoid potential resource contention.
+#### 1. Node-Level Optimizations
+- **CPU and Memory Utilization**: The node is underutilized. Consider consolidating workloads or scaling down the instance type to optimize costs.
 
-2. **Pod-Level Configurations:**
-   - 🔍 **Review Listener Configuration:** Ensure that listening on `0.0.0.0` is secure and necessary. If not, restrict to specific interfaces.
+#### 2. Pod-Level Configurations
+- **Heartbeat Seeds**: Ensure that the seed nodes are highly available to prevent single points of failure.
+- **Listener Configuration**: Review if listening on all interfaces is necessary for security purposes.
 
-3. **Resource Allocation Adjustments:**
-   - 📊 **Adjust JVM Heap Sizes:** The JVM is configured with a very high maximum heap size. Monitor actual usage and adjust `-Xmx` and `-XX:SoftMaxHeapSize` accordingly to avoid over-allocation.
+#### 3. Resource Allocation Adjustments
+- **Resource Requests and Limits**: Set appropriate requests and limits for the AVS pod to ensure resource guarantees and prevent overcommitment.
 
-4. **Performance Improvements:**
-   - 🚀 **Enable NUMA Settings:** If the hardware supports it, consider enabling NUMA settings to potentially improve performance.
+#### 4. Performance Improvements
+- **GC Configuration**: The use of ZGC is appropriate for low-latency applications. Ensure that the application is tuned for the workload characteristics.
 
-5. **JVM Memory Settings:**
-   - 🧠 **Fine-tune GC Threads:** Depending on workload, consider adjusting `ZYoungGCThreads` and `ZOldGCThreads` for optimal garbage collection performance.
+#### 5. JVM Memory Settings
+- **Heap Size**: The maximum heap size is set close to the node's total memory. Ensure that there is enough headroom for other processes.
+- **Metaspace and Class Space**: Monitor usage and adjust if necessary to prevent class loading issues.
 
-By implementing these recommendations, you can optimize resource usage and improve the performance of Aerospike Vector Search on this node.
+By implementing these recommendations, you can enhance the performance, reliability, and cost-effectiveness of your Aerospike Vector Search deployment. 🚀
 
 ### Node: ip-192-168-53-124.ec2.internal
 
 ### 🖥️ Node Analysis: ip-192-168-53-124.ec2.internal
 
-#### Node Capacity and Conditions
-- **CPU Capacity:** 4 cores
-- **Memory Capacity:** 15,896,988 Ki (~15.16 GiB)
-- **Allocatable CPU:** 3920m
-- **Allocatable Memory:** 14,880,156 Ki (~14.18 GiB)
-- **Node Conditions:**
-  - **MemoryPressure:** False (sufficient memory available)
-  - **DiskPressure:** False (no disk pressure)
-  - **PIDPressure:** False (sufficient PID available)
-  - **Ready:** True (node is ready)
+#### Node Capacity and Allocatable Resources
+- **Capacity:**
+  - CPU: 4 cores
+  - Memory: 15.8 GiB
+  - Pods: 58
+- **Allocatable:**
+  - CPU: 3920m
+  - Memory: 14.8 GiB
+  - Pods: 58
+
+#### Node Conditions
+- **MemoryPressure:** False (Sufficient memory available)
+- **DiskPressure:** False (No disk pressure)
+- **PIDPressure:** False (Sufficient PID available)
+- **Ready:** True (Node is ready)
 
 #### Cloud Provider Details
 - **Instance Type:** m5.xlarge
@@ -530,43 +463,53 @@ By implementing these recommendations, you can optimize resource usage and impro
 
 #### Resource Allocation and Utilization
 - **CPU Requests:** 500m (12% of allocatable)
-- **Memory Requests:** 740 Mi (5% of allocatable)
-- **Memory Limits:** 4180 Mi (28% of allocatable)
-- **No OOMKill Events:** No system or Kubernetes OOM events found.
+- **Memory Requests:** 740Mi (5% of allocatable)
+- **Memory Limits:** 4180Mi (28% of allocatable)
 
-#### Node-Level Recommendations
-1. **Optimize Resource Requests:**
-   - Current CPU and memory requests are low compared to capacity. Consider reviewing and adjusting requests to better reflect actual usage.
+#### Node-Level Issues or Warnings
+- No OOM events or warnings found.
+- Node is operating within normal parameters with no pressure on resources.
 
-2. **Monitor Disk Usage:**
-   - Although there is no disk pressure, keep an eye on ephemeral storage usage to prevent future issues.
+### Recommendations for Node-Level Optimizations
+1. **Resource Requests and Limits:**
+   - Consider setting CPU and memory limits for all pods to prevent resource overcommitment.
+   - Monitor and adjust resource requests to better reflect actual usage and improve scheduling efficiency.
 
-3. **Review Node Roles:**
-   - This node has no specific roles assigned. Ensure this is intentional and aligns with your cluster architecture.
+2. **Node Utilization:**
+   - Current CPU and memory usage is low. Evaluate if additional workloads can be scheduled on this node to optimize resource utilization.
 
-4. **Upgrade Considerations:**
-   - Consider upgrading the instance type if you anticipate increased load or require more resources for future workloads.
+### Pod-Level Analysis
+- **Observation:** No Aerospike Vector Search (AVS) pods are currently running on this node.
 
-### ❌ AVS Pod Analysis
-- **Observation:** No Aerospike Vector Search (AVS) pods are running on this node.
+### Recommendations for Pod-Level Configurations
+1. **Ensure AVS Pods are Scheduled:**
+   - Verify that AVS pods are scheduled on appropriate nodes with sufficient resources.
+   - Check pod affinity/anti-affinity rules and node selectors to ensure correct placement.
 
-### General Recommendations for AVS Pods
-1. **Ensure Proper Node Affinity:**
-   - If AVS pods are intended to run on this node, check node affinity and anti-affinity rules in the pod specifications.
+2. **JVM Configuration:**
+   - Since no AVS pods are found, ensure that the JVM settings in the `aerospike-vector-search.yml` are optimized for your workload requirements when they are deployed.
 
-2. **Validate Configuration:**
-   - Ensure `aerospike-vector-search.yml` is correctly configured with appropriate node roles, heartbeat seeds, and listener addresses.
+### Resource Allocation Adjustments
+- **CPU and Memory:**
+  - Review and adjust resource requests and limits for non-AVS pods to ensure they are not over-allocated.
+  - Consider increasing the number of pods if the node is underutilized.
 
-3. **JVM Configuration:**
-   - When AVS pods are deployed, review JVM settings for optimal performance:
-     - **Memory Settings:** Ensure heap sizes are appropriately set for your workload.
-     - **GC Settings:** Use ZGC for low-latency requirements and adjust thread counts as needed.
-     - **NUMA and Pre-touch Settings:** Enable NUMA interleaving and pre-touch for better memory management.
+### Performance Improvements
+- **Node Scaling:**
+  - If workload increases, consider scaling the node group or upgrading to a larger instance type to accommodate additional AVS pods.
 
-4. **Resource Requests and Limits:**
-   - Set appropriate CPU and memory requests/limits based on expected workload to prevent resource contention.
+### JVM Memory Settings (For Future AVS Pods)
+- **Memory Settings:**
+  - Ensure JVM heap sizes are configured based on available memory and workload requirements.
+  - Use `-Xms` and `-Xmx` to set appropriate initial and maximum heap sizes.
+  - Consider using `-XX:SoftMaxHeapSize` to manage heap growth.
 
-5. **Performance Monitoring:**
-   - Continuously monitor heap usage, metaspace, and class space to identify potential memory leaks or inefficiencies.
+- **GC Settings:**
+  - Optimize garbage collection settings based on application performance needs.
+  - Use `-XX:+UseZGC` for low-latency applications if applicable.
 
-By following these recommendations, you can ensure optimal performance and resource utilization for your Kubernetes node and AVS pods. 🚀
+- **Other Flags:**
+  - Consider enabling `-XX:+ExitOnOutOfMemoryError` to ensure the JVM exits on OOM, allowing Kubernetes to restart the pod.
+
+### Conclusion
+The node `ip-192-168-53-124.ec2.internal` is in good health with no current issues. However, ensure that AVS pods are properly scheduled and configured for optimal performance. Regularly review and adjust resource allocations to maintain efficient utilization.
